--- a/app.json
+++ b/app.json
@@ -13,9 +13,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.CAMERA"
+      ],
+      "package": "com.amirulzz.studyflow"
     },
     "web": {
       "bundler": "metro",
@@ -27,7 +31,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
@@ -39,7 +43,13 @@
       "typedRoutes": true
     },
     "extra": {
-      "geminiApiKey": "AIzaSyD09hjDrBb5vAmrpHimK8bVlNYN4xFSN1Q"
+      "geminiApiKey": "AIzaSyD09hjDrBb5vAmrpHimK8bVlNYN4xFSN1Q",
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "52f6536c-22af-4924-a86b-d3c6109f0d1e"
+      }
     }
   }
 }
